--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 
 :root {
-  --primary-color: rgb(0, 0, 0);
-  --select-color: rgb(12, 4, 4);
+  --primary-color: dodgerblue;
+  --select-color: dodgerblue;
   --success: rgb(15, 158, 2);
   --danger: rgb(214, 23, 23);
 }
@@ -18,7 +18,7 @@ body {
   display: flex;
   justify-content: center;
   height: 100vh;
-  background-color: whitesmoke;
+  background-color: rgb(252, 237, 189);
   background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23000000' fill-opacity='1'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
@@ -35,7 +35,7 @@ body {
 
 .header {
   background: var(--primary-color);
-  color: rgb(255, 0, 0);
+  color: rgb(255, 255, 255);
   font-family: Oxanium, sans-serif;
   font-size: 24px;
   text-shadow: 1px 2px 2px black;
@@ -85,7 +85,7 @@ label {
 
 .selected-label {
   background: var(--select-color);
-  color: rgb(255, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 .best-score {
@@ -149,9 +149,10 @@ label {
 
 .selected-item {
   background: var(--select-color);
+  opacity: 0.35;
   position: fixed;
   top: 443px;
-  z-index: -1;
+  z-index: 1;
   width: 529px;
   height: 80px;
 }
@@ -160,7 +161,7 @@ label {
 .selection-footer {
   width: 100%;
   height: 90px;
-  background: rgba(0, 0, 0, 1);
+  background: rgb(230, 230, 230);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -177,7 +178,7 @@ button {
   border-radius: 5px;
   font-size: 25px;
   font-family: Oxanium, sans-serif;
-  color: rgb(255, 0, 0);
+  color: rgb(255, 255, 255);
   border: none;
   outline: none;
 }
